--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <DOCTYPE HTML>
     <html>
         <head>
-            <link rel="stylesheet" href="stylesheet.css">
-            <link rel="stylesheet" href="sweetalert2.css">
+            <link rel="stylesheet" href="css/stylesheet.css">
+            <link rel="stylesheet" href="css/sweetalert2.css">
         </head>
         <body>
                 <div id="content">
@@ -55,7 +55,7 @@
             }
             }
             </script>
-            <script src="sweetalert2.all.min.js"></script>
-            <script src="index.js"></script>
+            <script src="js/sweetalert2.all.min.js"></script>
+            <script src="js/index.js"></script>
         </body>
         </html>
