changed "butt"to "button"

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <input type="number" id="timelimit" value="90" min="10" max="300" placeholder="0-300 seconds">
             </center>
             <br>
-            <input type="button" id="butt" value="Proceed">
+            <input type="button" id="button" value="Proceed">
             <hr>
             <label id="mainlabel">- - - - - -</label><br>
             <input type="text" maxlength="1" id="charinput" disabled="true">
