--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                             <div class="option" id="minimize">&#8212;</div>
                             <div class="option" id="openlist">&#127909;</div>
                             <div id="title">Bollywood</div>
-                            <div id="titleicon"><img src="titleicon.png"></div>
+                            <div id="titleicon"><img src="assets/titleicon.png"></div>
                            
                             
                         </header>
