removed some redundant css

--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
                 <input type="number" id="timelimit" value="90" min="10" max="300" placeholder="0-300 seconds">
             </center>
             <br>
-            <input type="button" id="button" value="Proceed">
+            <input class="buttonstyles" type="button" id="button" value="Proceed">
             <hr>
             <label id="mainlabel">- - - - - -</label><br>
             <input type="text" maxlength="1" id="charinput" disabled="true">
-            <input type="button" id="check" value="Check" disabled="true" onclick="checkletter()"><br><br><hr>
+            <input class="buttonstyles" type="button" id="check" value="Check" disabled="true" onclick="checkletter()"><br><br><hr>
             <label id="one">Chances Remaining: </label>
             <label id="chances">9</label><br>
             <label id="two">Letters Used: </label>
             <label id="used">-</label><br>
             <label id="timeleft">Time Left:</label><hr><br>
-            <input type="button" value="Play Again" id="again" onclick="playAgain()" disabled="true"><br>
+            <input class="buttonstyles" type="button" value="Play Again" id="again" onclick="playAgain()" disabled="true"><br>
             <p id="signature">Created With &#9829; and &#9749; By Aaditya Joshi</p>
 
             
